--- a/any1m.css
+++ b/any1m.css
@@ -303,18 +303,18 @@ body {
 }
 
 .playmusic {
-    margin: 0;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    align-items: center;
-    justify-items: center;
-
-}
-
-.btncontainer {
     display: flex;
-
-}
+    flex-direction: column;
+    align-items: center; /* จัดให้อยู่กึ่งกลางตามแนวตั้ง */
+    justify-content: center; /* จัดให้อยู่กึ่งกลางตามแนวนอน */
+    margin-top: 20px;
+    width: 100%;
+  }
+  .btncontainer {
+    display: flex;
+    justify-content: center; /* จัดปุ่มให้อยู่กึ่งกลาง */
+    gap: 10px; /* ระยะห่างระหว่างปุ่ม */
+  }
 
 .btnplay img {
     margin: 0 5px;
